[tool.poetry]
name = "house_price_lr"
version = "0.1.0"
description = "Linear regression of US house prices"
authors = ["Lukas Alberto Belck"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
